enabled preview for tests